<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logo_client_2" />


    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/start_login_btn"
                android:theme="@style/PSButton.Black"
                android:textSize="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/welcome_login"
                android:textStyle="bold"
                android:fontFamily="@font/abdo_h"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />
            <Button
                android:id="@+id/start_reg_btn"
                android:theme="@style/PSButton.Black"
                android:textSize="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/welcome_register_a_new_user"
                android:textStyle="bold"
                android:fontFamily="@font/abdo_h"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />




            <TextView
                android:fontFamily="@font/abdo_h"
                android:textSize="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/welcome_welcome_to_the_el_farag_of_motor_cars"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>



    </RelativeLayout>









</RelativeLayout>

