<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">



    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </View>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sheet_driver_nastedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back_sheet_all_service"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">

                </View>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:id="@+id/click_show_wich_sheet"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/XML_i"
                            android:text="@string/winch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/text_all_service_sheet" />


                        <ImageView
                            android:id="@+id/XML_J"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:src="@drawable/winsh_hedrolek" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/click_show_sat7a_sheet"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView

                            android:text="@string/Sat7a_sheet_Flats"
                            style="@style/text_all_service_sheet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_winch_disply" />

                    </LinearLayout>
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/darker_gray">

                </View>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                android:id="@+id/click_show_open_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:text="@string/Service_key"
                    style="@style/text_all_service_sheet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_repair_key_disply" />

            </LinearLayout>
                <LinearLayout
                    android:id="@+id/click_show_banzen_sheet"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/XML_G"
                        android:text="@string/Fuel_saving"
                        style="@style/text_all_service_sheet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:id="@+id/image_btn_get_location"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_banzen_disply" />

                </LinearLayout>


            </LinearLayout>




                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/darker_gray">

                </View>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/click_show_bettery_sheet"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/battery_charge"
                        style="@style/text_all_service_sheet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />


                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_battery_disply" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/click_show_change_bancher"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/Tire_change"
                        style="@style/text_all_service_sheet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_change_tires" />

                </LinearLayout>


            </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/darker_gray">

                </View>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/click_show_transprot_with_city_sheet"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/Transfer_between_cities"
                        style="@style/text_all_service_sheet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_drag_car_disply" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/click_show_taxi"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/taxi"
                        style="@style/text_all_service_sheet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_taxi" />

                </LinearLayout>


            </LinearLayout>




            </LinearLayout>




        </android.support.v7.widget.CardView>




    </android.support.v4.widget.NestedScrollView>






</android.support.design.widget.CoordinatorLayout>